0000-00-00 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.28

* Look for usernames when adding clusters
- Thanks to Kristian Lyngstol for the patch
* Account for multiple host definitions within ssh configuration file
- Thanks to anonymous for the patch
* Allow for long line continuation in config files with a backslash
- Thanks to Mike Loseke for the patch
* Improve binary search to 
  - ignore directories of the same name, and 
  - always search for the binary if it is not fully qualified
- Thanks to Ian Marsh for the patch

2009-09-24 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.27

* Add in list of clusters to 'Add Host' window 
  - thanks for Stanislas Rouvelin for the idea
* Fix bug where unresolvable host stopped program running
  - thanks to Sami Kerola
* Add in config for auto-tearoff of send and host menus
  - thanks to James Chernikov for the idea
* Add in send menu xml definition file
  - thanks to James Chernikov for the idea

2009-06-02 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.26-1

* Allow user to set a different ConnectTimeout and -o string (Tony Mancill)
* Fix warning from 'mandb' (Tony Mancill)
* Continue connecting to unresolvable hosts (debian bug 499935) (Tony Mancill)
* Correct bug with unset default ports (Tony Mancill)
* Rearrange pod documentation to remove extraenous comment (Tony Mancill)
* Cope better with IPv6 addresses
* Fix bug with passing arguments from command line to comms method binary
* Rework defaultport code
* Add new "-a 'command'" option for running a command in each terminal
* Fix bug with some host lookups failing
* Set window hints on terminals slightly differently to help with tiling
* Reserve 5 pixels on top and left hand side of terminals for better tiling
* Increase reserve of screen from bottom from 40 pixels to 60
* Better notes in docs for screen/terminal reserving
* Minor fixup to docs formatting
* Correct pasting mechanism into control window